@@ -24,12 +24,11 @@ to call at top-level: ant deploy-contrib compile-core-test
 <project name="zebra" default="jar">
 
   <import file="build-contrib.xml"/>
-  <property name="zebraVersion" value="0.2.0" />
 
   <!-- Override jar target to specify main class -->
   <target name="jar" depends="compile" description="Build zebra jar">
     <jar
-      jarfile="${build.dir}/${name}-${zebraVersion}.jar"
+      jarfile="${build.dir}/${name}-${version}.jar"
       basedir="${build.classes}"      
     >
   	<manifest>
@@ -40,7 +39,7 @@ to call at top-level: ant deploy-contrib compile-core-test
 
   <target name="schema-jar" depends="compile">
     <jar
-      jarfile="${build.dir}/schema-${zebraVersion}.jar"
+      jarfile="${build.dir}/schema-${version}.jar"
       basedir="${build.classes}"      
       includes="**/schema/**"
     >
