@@ -5,6 +5,9 @@ Trunk (unreleased changes)
   INCOMPATIBLE CHANGES
 
   IMPROVEMENTS
+
+    PIG-1089 Use Pig's version for Zebra's own versi (chaow via olgan)
+
     PIG-1069  Order Preserving Sorted Table Union (yanz via gates)
 
     PIG-997 Sorted Table Support by Zebra (yanz via gates)
